--- a/index.html
+++ b/index.html
@@ -265,6 +265,28 @@
             box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
         }
 
+        .btn-validate {
+            background: #4caf50;
+            color: white;
+            border: none;
+            padding: 12px 20px;
+            border-radius: 8px;
+            cursor: pointer;
+            font-weight: 600;
+            transition: all 0.3s;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            width: 100%;
+            justify-content: center;
+        }
+
+        .btn-validate:hover {
+            background: #45a049;
+            transform: translateY(-2px);
+            box-shadow: 0 4px 12px rgba(76, 175, 80, 0.4);
+        }
+
         .meal-food-item {
             background: #f9f9f9;
             padding: 12px;
@@ -315,6 +337,60 @@
             text-align: center;
             font-weight: bold;
             margin-top: 12px;
+        }
+
+        .calculation-section {
+            background: #f0f7ff;
+            border: 2px solid #667eea;
+            border-radius: 8px;
+            padding: 15px;
+            margin-top: 15px;
+        }
+
+        .calculation-section > label {
+            font-weight: 700;
+            color: #667eea;
+            font-size: 14px;
+            display: block;
+            margin-bottom: 12px;
+        }
+
+        .calculation-result {
+            background: white;
+            padding: 10px 12px;
+            border-radius: 6px;
+            color: #667eea;
+            font-weight: bold;
+            border-left: 4px solid #667eea;
+            font-size: 14px;
+            margin-bottom: 8px;
+        }
+
+        .calculation-input-group {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px;
+            margin-bottom: 15px;
+        }
+
+        .calculation-input-group > div {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .calculation-input-group label {
+            font-weight: 600;
+            color: #666;
+            font-size: 12px;
+            margin-bottom: 6px;
+        }
+
+        .calculation-input-group small {
+            display: block;
+            color: #999;
+            font-size: 11px;
+            margin-top: 4px;
+            font-weight: normal;
         }
 
         .action-buttons {
@@ -418,6 +494,22 @@
                 <div>
                     <label>Dose Basale (u)</label>
                     <input type="number" id="patient-basale" placeholder="0" min="0" max="100" step="0.5">
+                </div>
+                <div>
+                    <label>Indice de Sensibilité à l'Insuline (g/u)</label>
+                    <input type="number" id="patient-insulin-sensitivity" placeholder="Ex: 12" min="0.1" max="100" step="0.1">
+                </div>
+                <div>
+                    <label>Ratio Petit Déjeuner (10g glucides = ? u)</label>
+                    <input type="number" id="patient-ratio-petit-dejeuner" placeholder="Ex: 1" min="0.1" max="10" step="0.1">
+                </div>
+                <div>
+                    <label>Ratio Déjeuner (10g glucides = ? u)</label>
+                    <input type="number" id="patient-ratio-dejeuner" placeholder="Ex: 1" min="0.1" max="10" step="0.1">
+                </div>
+                <div>
+                    <label>Ratio Dîner (10g glucides = ? u)</label>
+                    <input type="number" id="patient-ratio-diner" placeholder="Ex: 1" min="0.1" max="10" step="0.1">
                 </div>
             </div>
         </div>
