Design: remove emojis, cleaner and simpler UI with text labels only

--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@
 
         <!-- Infos Patient -->
         <div class="patient-info-block">
-            <h3>👤 Infos Patient</h3>
+            <h3><i class="fas fa-user"></i> Infos Patient</h3>
             <div class="patient-info-grid">
                 <div>
                     <label>Nom du Patient</label>
@@ -566,35 +566,35 @@
 
         <!-- Historique des 10 derniers jours -->
         <div class="patient-info-block" id="history-section" style="display:none;">
-            <h3>📅 Historique (10 derniers jours)</h3>
+            <h3><i class="fas fa-history"></i> Historique (10 derniers jours)</h3>
             <div id="history-list" style="display: grid; gap: 10px;"></div>
         </div>
 
         <div class="action-buttons">
             <button class="btn-primary" id="btn-export">
                 <i class="fas fa-download"></i>
-                📥 Exporter Rapport du Jour
+                Exporter Rapport du Jour
             </button>
             <button class="btn-secondary" id="btn-history">
                 <i class="fas fa-history"></i>
-                📅 Voir Historique
+                Voir Historique
             </button>
             <button class="btn-danger" id="btn-clear-patient">
                 <i class="fas fa-user-slash"></i>
-                👤 Effacer Infos Patient
+                Effacer Infos Patient
             </button>
             <button class="btn-secondary" id="btn-clear-all">
                 <i class="fas fa-trash"></i>
-                🗑️ Tout Effacer
+                Tout Effacer
             </button>
         </div>
     </div>
 
     <footer>
-        <p>GluciTracker • Base Ciqual</p>
-        <p style="margin-top: 10px; font-size: 12px; opacity: 0.8;">
-            👨‍💻 <a href="https://github.com/DandaneRida" style="color: white; text-decoration: none;">Code Source</a> • 
-            📧 <a href="mailto:ridadandane@gmail.com" style="color: white; text-decoration: none;">Contacter le développeur</a>
+        <p>GluciTracker • Suivi Glycémique & Insuline</p>
+        <p style="margin-top: 10px; font-size: 12px; opacity: 0.9;">
+            <a href="https://github.com/DandaneRida" style="color: white; text-decoration: none;">Code Source</a> • 
+            <a href="mailto:ridadandane@gmail.com" style="color: white; text-decoration: none;">Contact</a>
         </p>
     </footer>
 
