🐛 Fix: Correct PDF filename to use loaded date + Improve Service Worker offline support
- Fix nouveau nom du fichier PDF pour utiliser currentLoadedDate au lieu de new Date()
- Améliorer service-worker.js avec meilleure stratégie de caching
- Séparer caching local (obligatoire) et CDN (optional)
- Ajouter meilleur logging pour diagnostiquer les problèmes offline
- Ajouter fallback pour les pages manquantes
- Améliorer enregistrement du Service Worker dans HTML avec diagnostics

--- a/index.html
+++ b/index.html
@@ -618,6 +618,8 @@
           navigator.serviceWorker.register('service-worker.js')
             .then(reg => {
               console.log('✅ Service Worker enregistré avec succès');
+              console.log('Scope:', reg.scope);
+              
               // Vérifier les mises à jour
               reg.addEventListener('updatefound', () => {
                 const newWorker = reg.installing;
@@ -627,9 +629,18 @@
                   }
                 });
               });
+              
+              // Test offline
+              console.log('Mode offline supporté: ', 'serviceWorker' in navigator && 'caches' in window);
             })
-            .catch(err => console.log('⚠️ Erreur Service Worker:', err));
+            .catch(err => {
+              console.error('❌ Erreur Service Worker:', err);
+              console.error('URL du SW:', './service-worker.js');
+              console.error('Origine:', window.location.origin);
+            });
         });
+      } else {
+        console.warn('⚠️ Service Worker non supporté par ce navigateur');
       }
     </script>
 
